# libreM

./: .gitignore  .insforgeignore  AGENT.md  README1.md  ROADMAP.md  SECURITY.md  contracts.md  insforge.yml  opencode.json.txt  package-lock.json  package.json  setup_db_final.js  setup_insforge.js  test_health.py  test_mcp.js  test_register.py  test_register_local.py  verify_backend.ps1  walkthrough.md.resolved
.insforge/: project.json
backend/: .env  .env.example  auth.py  auth_helper.py  check_db.py  check_pg.js  config.py  database.py  db_models.py  init_db.py  insforge.yml  main.py  models.py  pyproject.toml  requirements.txt  seed.py  seed_db.js  seed_postgres.py  server.js  server.py  test_db_schema.py
backend/routers/: auth.py  cart.py  categories.py  favorites.py  orders.py  products.py
backend/schemas/: auth.py  cart.py  order.py  product.py
crm-app/: index.html  package-lock.json  package.json  vite.config.ts
crm-app/src/: App.tsx  index.css  types.ts
crm-app/src/components/: AISummary.tsx  Layout.tsx
crm-app/src/lib/: insforge.ts
crm-app/src/pages/: AuthPage.tsx  CompaniesPage.tsx  ContactsPage.tsx  DealDetailPage.tsx  DealsPage.tsx
deploy_pkg/: asset-manifest.json  auth.py  config.py  database.py  db_models.py  index.html  index.py  init_db.py  models.py  requirements.txt  seed_pg.py  vercel.json
deploy_pkg/static/css/: main.2e276345.css  main.2e276345.css.map
frontend/: .env  .vade-report  index.html  package-lock.json  package.json  vercel.json
frontend/public/: index.html
frontend/src/: App.css  App.js  mock.js
(+35 files in other folders)
